feat: week 2 task
1. creatable all elements from js

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,52 +19,10 @@
       >
         <h1 class="font-bold text-2xl">Logo</h1>
       </header>
-      <section class="px-10 mt-5">
-        <div class="flex flex-row justify-between">
-          <div>
-            <h4 class="text-yellow-50 font-mono font-bold">Books</h4>
-          </div>
-
-          <div
-            class="search relative w-[25%] h-[30px] rounded-md overflow-hidden border-[1px] border-yellow-300 focus-within:border-yellow-300"
-          >
-            <input class="w-full h-full pl-3 search-input" type="text" />
-            <div
-              class="w-[30px] h-[30px] absolute right-0 top-0 z-10 cursor-pointer"
-            >
-              <i class="fa fa-search text-red-600" aria-hidden="true"></i>
-            </div>
-          </div>
-        </div>
-        <div class="books flex flex-wrap justify-center mt-5"></div>
-      </section>
     </main>
-    <div>
-      <header
-        class="px-10 min-h-[50px] text-white flex items-center bg-[#655bdd]"
-      >
-        <h1 class="font-bold text-2xl">Logo</h1>
-      </header>
-      <section class="px-10 mt-5">
-        <div class="flex flex-row justify-between">
-          <div>
-            <h4 class="text-yellow-50 font-mono font-bold">Books</h4>
-          </div>
-
-          <div
-            class="search relative w-[25%] h-[30px] rounded-md overflow-hidden border-[1px] border-yellow-300 focus-within:border-yellow-300"
-          >
-            <input class="w-full h-full pl-3 search-input" type="text" />
-            <div
-              class="w-[30px] h-[30px] absolute right-0 top-0 z-10 cursor-pointer"
-            >
-              <i class="fa fa-search text-red-600" aria-hidden="true"></i>
-            </div>
-          </div>
-        </div>
-        <div class="books flex flex-wrap justify-center mt-5"></div>
-      </section>
-    </div>
+    <p class="error text-white text-center"></p>
+    <p class="loading text-white text-center"></p>
+    <div class="searchable"></div>
 
     <script defer src="./js/main.js"></script>
     <script
