added function to tic tac toe

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,16 @@
     <title>Document</title>
   </head>
   <body class="min-h-screen bg-[#13121f] font-mono">
+    <div
+      class="fixed inset-0 bg-[#fff]/[0.8] z-10 result justify-center flex-col items-center hidden"
+    >
+      <h5 class="text">Draw</h5>
+      <button
+        class="mt-4 bg-red-500 text-white p-2 rounded-md hover:bg-red-600 active:bg-red-700 play-again"
+      >
+        Play Again
+      </button>
+    </div>
     <main>
       <header
         class="px-10 min-h-[50px] text-white flex items-center bg-[#655bdd]"
@@ -22,7 +32,7 @@
     </main>
     <p class="error text-white text-center"></p>
     <p class="loading text-white text-center"></p>
-    <div class="searchable"></div>
+    <div class="container flex justify-center items-center min-h-screen"></div>
 
     <script defer src="./js/main.js"></script>
     <script
@@ -31,3 +41,6 @@
     ></script>
   </body>
 </html>
+<!-- staging -->
+<!-- committing -->
+<!-- pushing -->
